fixing recs and static dirs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     
     {% block extra_css %}{% endblock %}
 </head>
@@ -88,7 +88,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/app.js' %}"></script>
+    <script src="{% static 'app/js/app.js' %}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
