--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -118,14 +118,14 @@ main {
 .min-h-100 { min-height: 100px; }
 
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    /* padding-top: 50px; */
+    /* padding-bottom: 20px; */
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    /* padding-left: 15px;
+    padding-right: 15px; */
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
